--- a/photogur/app/views/pictures/index.html.erb
+++ b/photogur/app/views/pictures/index.html.erb
@@ -4,3 +4,4 @@
 <%- @pictures.each do |picture| %>
   <p><%= picture[:title] %>, <%= picture[:artist] %></p>
   <%= link_to image_tag(picture.url), "/pictures/#{picture.id}" %>
+<% end %>
