--- a/photogur/app/views/pictures/index.html.erb
+++ b/photogur/app/views/pictures/index.html.erb
@@ -1,7 +1,7 @@
-<h1>Pictures (<%= @pictures.length %>)</h1>
+<h1>Pictures (<%= @most_recent_pics.length %>)</h1>
 <%= link_to "New Picture", "/pictures/new" %>
 
-<%- @pictures.each do |picture| %>
+<%- @most_recent_pics.each do |picture| %>
   <p><%= picture[:title] %>, <%= picture[:artist] %></p>
   <%= link_to image_tag(picture.url), "/pictures/#{picture.id}" %>
 <% end %>
