--- a/photogur/app/views/pictures/index.html.erb
+++ b/photogur/app/views/pictures/index.html.erb
@@ -1,7 +1,14 @@
 <h1>Pictures (<%= @most_recent_pics.length %>)</h1>
 <%= link_to "New Picture", "/pictures/new" %>
 
-<%- @most_recent_pics.each do |picture| %>
+<% @most_recent_pics.each do |picture| %>
+  <p><%= picture[:title] %>, <%= picture[:artist] %></p>
+  <%= link_to image_tag(picture.url), "/pictures/#{picture.id}" %>
+<% end %>
+
+
+<h2>Pictures Older Than 1 Month (<%= @created_before.length %>)</h2>
+<% @created_before.each do |picture| %>
   <p><%= picture[:title] %>, <%= picture[:artist] %></p>
   <%= link_to image_tag(picture.url), "/pictures/#{picture.id}" %>
 <% end %>
