Disply pictures more than one hour old

--- a/photogur/app/views/pictures/index.html.erb
+++ b/photogur/app/views/pictures/index.html.erb
@@ -7,7 +7,7 @@
 <% end %>
 
 
-<h2>Pictures Older Than 1 Month (<%= @created_before.length %>)</h2>
+<h2>Pictures Older Than 1 Hour (<%= @created_before.length %>)</h2>
 <% @created_before.each do |picture| %>
   <p><%= picture[:title] %>, <%= picture[:artist] %></p>
   <%= link_to image_tag(picture.url), "/pictures/#{picture.id}" %>
